Fixed the spacing at the logout button

--- a/Eksamensprojekt - Andreas P/app/static/main.css
+++ b/Eksamensprojekt - Andreas P/app/static/main.css
@@ -14,6 +14,10 @@ html, body {
   border: 0;
 }
 
+nav {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
 
 .center {
   margin: auto;
